<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Insta Clone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="follow">Follow</string>
    <string name="following">Following</string>

    <string name="edit_profile_button_text">Edit Profile</string>

    <!--    Post list items-->
    <string name="comments_count">%d Comments</string>
    <string name="likes_count" tools:ignore="PluralsCandidate">%d Likes</string>

    <!--  Notification texts  -->
    <string name="comment_notification_text">Added comment on your post.</string>
    <string name="like_notification_text">Liked your post.</string>
    <string name="follow_notification_text">is now Following you.</string>

    <!--  Story strings  -->
    <string name="views_count">Views : %d</string>
    <string name="delete">Delete</string>

    <!--  Server message  -->
    <string name="failed_to_save_data">Failed to save data</string>
    <string name="failed_to_update_status">Unable to update status</string>
    <string name="unable_to_fetch_user_details">Unable to fetch user details, at this moment</string>
    <string name="failed_to_upload_profile_image">Failed to upload profile image, please try again later</string>
    <string name="failed_to_update_user_detail">Unable to update user details, please try again later</string>
    <string name="failed_to_upload_post_image">Failed to post picture, please try again later</string>
    <string name="unable_post">Unable to post, please try again later</string>
    <string name="failed_to_fetch_post_data">Unable to fetch posts data</string>
    <string name="unable_to_post_comment">Unable to post comment</string>
    <string name="failed_to_upload_status_image">Failed to upload status, please try again later</string>
    <string name="unable_to_share_status">Unable to post status, please try again later</string>

    <!--  Validation String  -->
    <string name="full_name_validation_string">Full name required</string>
    <string name="user_name_validation_string">User name required</string>
    <string name="user_bio_validation_string">User Bio required</string>
    <string name="comment_field_validation_string">Please write something to add comment about the post.</string>
    <string name="email_field_required">Email required</string>
    <string name="password_field_required">Password required</string>
    <string name="full_name_field_required">Full name required</string>
    <string name="user_name_field_required">User name required</string>

    <!--  Comment screen texts  -->
    <string name="comments">Comments</string>
    <string name="publish">Publish</string>


    <string name="account_change_image">Change Image</string>
    <string name="account_full_name_hint">Full Name</string>
    <string name="account_user_name_hint">User Name</string>
    <string name="account_bio_hint">Bio</string>
    <string name="account_logout_button_text">Logout</string>
    <string name="delete_account_button_text">Delete Account</string>
    <string name="notifications_title">Notifications</string>
    <string name="email_sign_up_hint">Email</string>
    <string name="password_sign_up_hint">Password</string>
    <string name="register_sign_up_button_text">Register</string>
    <string name="sign_in_redirect_link_sign_up_page">Already have an Account? Sign In</string>
    <string name="post_comment_text_hint">Post Comment</string>
    <string name="login_button_test">Login</string>
    <string name="sign_up_redirect_link">Need New Account? Sign Up</string>
    <string name="add_story_text">Add Story</string>
    <string name="photo">Photo</string>
    <string name="user_name">USER NAME</string>
    <string name="posts">Posts</string>
    <string name="followers_label">Followers</string>
    <string name="following_label">Following</string>
    <string name="add_comment_error_message">Pleas add comment for this post</string>

</resources>
